--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,21 @@
 <resources>
     <string name="app_name">EasyNote</string>
-    <string name="action_search">Search</string>
+    <string name="action_search">Search All Notes</string>
     <string name="action_add">Add</string>
     <string name="note_hint">Add a new note here...</string>
-    <string name="note_label">#</string>
+    <string name="note_label_default">Note</string>
     <string name="note_label_name">Label</string>
+
+    <!--register-->
+    <string name="name">Full Name</string>
+    <string name="phone">Phone No.</string>
+    <string name="password">Password</string>
+    <string name="prompt_name">Your Name</string>
+    <string name="prompt_phone">Phone Number</string>
+    <string name="prompt_password">Enter Password</string>
+    <string name="action_sign_up">Sign up</string>
+    <string name="action_login_in">Login in</string>
+    <string name="forget_password">Forget Password</string>
+    <string name="register">Register</string>
+    <string name="register_fail">Register Fail</string>
 </resources>
